services/stirling-pdf/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      containers:
      - name: stirling-pdf
        image: frooodle/s-pdf:0.20.2
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 15m
            memory: 588M
          limits:
            memory: 588M
